tests/functional/lang/eval-fail-assert-nested-bool.err.exp
error:
       … while evaluating the condition of the assertion '({ a = { b = [ ({ c = { d = true; }; }) ]; }; } == { a = { b = [ ({ c = { d = false; }; }) ]; }; })'
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:1:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             | ^
            2|

       … while comparing attribute 'a'
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:39:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                       ^
            2|

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:10:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |          ^
            2|

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:44:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                            ^
            2|

       … while comparing attribute 'b'
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:39:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                       ^
            2|

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:10:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |          ^
            2|

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:44:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                            ^
            2|

       … while comparing list element 0
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:39:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                       ^
            2|

       … while comparing attribute 'c'
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:39:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                       ^
            2|

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:20:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                    ^
            2|

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:54:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                                      ^
            2|

       … while comparing attribute 'd'
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:39:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                       ^
            2|

       … where left hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:20:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                    ^
            2|

       … where right hand side is
         at /pwd/lang/eval-fail-assert-nested-bool.nix:1:54:
            1| assert { a.b = [ { c.d = true; } ]; } == { a.b = [ { c.d = false; } ]; };
             |                                                      ^
            2|

       error: boolean 'true' is not equal to boolean 'false'
